--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "redis": "^5.8.0",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "type": "module"
   }
 }
