--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "react-toastify": "^11.0.5"
   }
 }
