--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
